--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./server.js"
+    "dev": "node ./src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "soap": "^0.31.0"
   }
