--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
